Service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-sample-service
  namespace: my-space
spec:
  host: prometheus-sample-service.apps.my-sample-host.com
  selector:
    app: prometheus-sample-service
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  type: ClusterIP
  sessionAffinity: None
